fix hash rocket

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -42,5 +42,5 @@
             =link_to "", class: "main--bottom-Contents__btn" do
               = fa_icon 'image'
             %label
-              %input{:type => "file", :value => "image"}
+              %input{type: "file", value: "image"}
         .send-button Send
