add function off flash massage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,4 +2,6 @@
 @import "font-awesome";
 @import "./variable";
 @import "modules/user";
+@import "config/colors";
+@import "modules/flash";
 @import "./main";
