--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,8 @@
-@import "./reset";
 @import "font-awesome";
+@import "./reset";
 @import "./variable";
-@import "modules/user";
 @import "config/colors";
+@import "modules/user";
 @import "modules/flash";
+@import "modules/group";
 @import "./main";
